log
Fri 23 Sep 2022 11:31:44 AM UTC: 
 tests:  1|8
total_score: 0/70
37f4755
Fri 23 Sep 2022 11:51:30 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
4c8d8eb
Fri 23 Sep 2022 12:03:00 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:20: error: expected expression before ‘TreeMap’
   76 |   TreeNode*  aux = TreeMap->root;
      |                    ^~~~~~~
Compilation failed
380ae49
Fri 23 Sep 2022 12:03:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:20: error: ‘Tree’ undeclared (first use in this function); did you mean ‘tree’?
   76 |   TreeNode*  aux = Tree->root;
      |                    ^~~~
      |                    tree
treemap.c:76:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
371cf4f
Fri 23 Sep 2022 12:08:33 PM UTC: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
2d49f77
Fri 23 Sep 2022 12:17:34 PM UTC: 
 treemap.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  0|0
2701eb6
Fri 23 Sep 2022 12:20:24 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
da49ee9
Fri 23 Sep 2022 12:20:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
130ddd3
Fri 23 Sep 2022 12:23:56 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
92eb4ca
Sat 24 Sep 2022 03:05:58 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
bbcb319
Sat 24 Sep 2022 03:08:22 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:96:6: error: expected ‘(’ before ‘aux’
   96 |   if aux->pair->key != key
      |      ^~~
      |      (
treemap.c:96:15: error: statement with no effect [-Werror=unused-value]
   96 |   if aux->pair->key != key
      |      ~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
5c62578
Sat 24 Sep 2022 03:08:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a4a524e
Sat 24 Sep 2022 03:09:27 PM UTC: 
 treemap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
c8c3fee
Sat 24 Sep 2022 03:12:17 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
21e7dc9
Sat 24 Sep 2022 03:13:20 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|7
total_score: 5/70
7f96728
Sat 24 Sep 2022 03:15:11 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
5256e80
Sat 24 Sep 2022 03:16:50 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
a36a0f5
Sat 24 Sep 2022 03:39:35 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   94 |   if((aux) && (aux->pair->key == key))
      |   ^~
treemap.c:96:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   96 |     return current->pair;
      |     ^~~~~~
treemap.c:96:12: error: ‘current’ undeclared (first use in this function)
   96 |     return current->pair;
      |            ^~~~~~~
treemap.c:96:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:97:3: error: ‘else’ without a previous ‘if’
   97 |   else
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
3bd47bb
Sat 24 Sep 2022 03:40:03 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:12: error: ‘current’ undeclared (first use in this function)
   97 |     return current->pair;
      |            ^~~~~~~
treemap.c:97:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:101:1: error: control reaches end of non-void function [-Werror=return-type]
  101 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bf083aa
